Clarify titles on the Outreachy sponsorship page.
Larissa is no longer a coordinator in Outreachy, due to job role changes.

In the previous two cohorts, we renamed the Mozilla community to the
Firefox community. This was to differentiate between Mozilla as a
company and Firefox as an open source community. Outreachy interns don't
work *for* any sponsor, Outreachy interns work on projects *with* an
open source community.

Make sure our sponsorship page reflects that nuanced language, while
still making the connection between Outreachy interns working on Firefox
and later going onto work at Mozilla.

--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -17,8 +17,8 @@ Sponsor Outreachy
 	<div class="row align-items-center justify-content-center">
 		<div class="align-self-center">
 			<img src="{% static 'mozilla-larissa-maja-sara.jpg' %}" class="img-fluid align-self-start" img alt="Mozilla community sponsor Larissa Shapiro, with former Outreachy interns (now Mozilla employees) Sara Mansouri and Maja Frydrychowicz">
-			<p><i>Mozilla community coordinator, Larissa Shaprio (middle), with former Outreachy interns Maja Frydrychowicz (left) and Sara Mansouri (right).</i></p>
-			<p><i>After their Outreachy internships, Maja became a Mozilla employee and Sara continued as a volunteer leader in various areas of the project.</i></p>
+			<p><i>Former Firefox community coordinator, Larissa Shaprio (middle), with former Outreachy interns Maja Frydrychowicz (left) and Sara Mansouri (right).</i></p>
+			<p><i>After their Outreachy internships, Maja became a Mozilla employee and Sara continued as a volunteer leader in the Firefox community.</i></p>
 			<p><i>Photo CC-BY-SA-NC Sage Sharp</i></p>
 		</div>
 	</div>
