Change sponsorship levels and sponsorship invoicing dates
Starting in the December 2022 cohort, Outreachy is changing our
sponsorship tiers. Update our sponsorship page to reflect that.

Change the dates when we start invoicing sponsors. We will begin to
invoice sponsors sooner (during the contribution period) in order to
avoid invoicing during Outreachy organizers' busy times (the intern
selection period and start of the internship).

--- a/home/templates/home/sponsor.html
+++ b/home/templates/home/sponsor.html
@@ -43,10 +43,11 @@ Sponsor Outreachy
 <p>Please consider sponsoring the program at one of these game-changing levels:</p>
 
 <ul>
-	<li>Ceiling Smasher: $52,000</li>
-	<li>Equalizer: $32,500</li>
-	<li>Promoter: $19,500</li>
-	<li>Includer: $6,500</li>
+	<li>Ceiling Smasher: $75,000</li>
+	<li>Equalizer: $50,000</li>
+	<li>Promoter: $25,000</li>
+	<li>Includer: $10,000</li>
+	<li>Welcomer: $5,000</li>
 </ul>
 
 <p>The sponsorship levels include a sponsor logo placement on the Outreachy website for six months. Outreachy runs internship cohorts every six months. The Outreachy sponsorship is credited on a per-cohort basis.</p>
@@ -72,8 +73,8 @@ Sponsor Outreachy
 <p>Important dates for sponsors to the May internship cohort:</p>
 <ul>
 	<li>Jan 1 - call for sponsors begins</li>
-	<li>May 1 - deadline for sponsorship commitment</li>
-	<li>late May or early June - sponsors invoiced</li>
+	<li>Apr 1 - sponsors invoicing begins</li>
+	<li><b>May 1 - deadline for sponsorship commitment for May cohort</b></li>
 	<li>August - sponsor employees connected to interns for informal career chats</li>
 	<li>August - internship ends, which is great time for sponsors to send job postings to the opportunities mailing list</li>
 </ul>
@@ -81,13 +82,13 @@ Sponsor Outreachy
 <p>Important dates for sponsors to the December internship cohort sponsors:</p>
 <ul>
 	<li>Aug 1 - call for sponsors begins</li>
-	<li>Nov 1 - deadline for sponsorship commitment</li>
-	<li>late November or early December - sponsors invoiced</li>
+	<li>Oct 1 - sponsor invoicing begins</li>
+	<li><b>Nov 1 - deadline for sponsorship commitment for December cohort</b></li>
 	<li>February - sponsor employees connected to interns for informal career chats</li>
 	<li>February - internship ends, great time for sponsors to send job postings to the opportunities mailing list</li>
 </ul>
 
-<p>Outreachy can invoice sponsors earlier or later to align with your quarterly budget deadlines.</p>
+<p>Outreachy may be able to invoice sponsors earlier or later to align with your budget deadlines. Please contact us to let us know what your invoicing deadlines are.</p>
 
 <h3>Sponsorship Presentation</h3>
 
