Make application instructions more eye-catching.
Make it clear that applicants should read specific sections of
documentation before filling out their application. Turn the link text
into an action item list for applicants.

--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -15,18 +15,23 @@ Welcome to Outreachy!
 You are applying for the {{ current_round.official_name }}.
 </p>
 
-<p>
-Before you fill out your application, please read the following:
-</p>
+<div class="card border-warning mb-3">
+	<div class="card-header text-white bg-warning">Please read this before you start</div>
+	<div class="card-body">
+		<p>You cannot save your initial application. You have to fill it out all at once. You cannot edit your application later. Make sure you have a stable internet connection.</p>
+		<p>
+		Before you fill out your application, please do the following:
+		</p>
 
-<ul>
-	<li><a href="{% url 'docs-applicant' %}#eligibility">Are you eligible for Outreachy?</a></li>
-	<li><a href="{% url 'docs-applicant' %}#initial-application">Application instructions</a></li>
-	<li><a href="{% url 'docs-applicant' %}#essay-questions">List of essay questions</a></li>
-	<li><a href="{% url 'docs-applicant' %}#essay-tips">Tips for writing strong essays</a></li>
-</ul>
+		<ul>
+			<li><a href="{% url 'docs-applicant' %}#eligibility">Find out if you are eligible for Outreachy</a></li>
+			<li><a href="{% url 'docs-applicant' %}#initial-application">Find any documents you might need</a></li>
+			<li><a href="{% url 'docs-applicant' %}#essay-questions">Prepare for the essay questions</a></li>
+			<li><a href="{% url 'docs-applicant' %}#essay-tips">Read our tips for writing strong essays</a></li>
+		</ul>
 
-<p>You cannot save your initial application. You have to fill it out all at once. Make sure you have a stable internet connection.</p>
+	</div>
+</div>
 
 <h2>General Eligibility</h2>
 
