Add Russia to the list of countries under U.S. sanctions

--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -89,17 +89,17 @@ You are applying for the {{ current_round.official_name }}.
 		<div class="form-group card">
 			{{ field.errors }}
 			<div class = "card-header">
-				{{ field.label_tag }}
+				Are you a citizen, resident, or national of Crimea, Cuba, Iran, North Korea, Russia, or Syria?
 			</div>	    
 			<div class = "card-body">
 				{{ field }}
 			</div>
 			<div class="card-footer bg-white">
-				<p>If you are living in Crimea, Cuba, Iran, North Korea, or Syria, say yes.</p>
+				<p>If you are living in Crimea, Cuba, Iran, North Korea, Russia, or Syria, say yes.</p>
 
-				<p>If you are a citizen or national of Cuba, Iran, North Korea, or Syria, say yes. Citizens and nationals of those countries should say yes, even if you are not currently living in that country.</p>
+				<p>If you are a citizen or national of Cuba, Iran, North Korea, Russia, or Syria, say yes. Citizens and nationals of those countries should say yes, even if you are not currently living in that country.</p>
 
-				<p>Outreachy's fiscal parent, Software Freedom Conservancy, is a 501(c)(3) charitable non-profit in the United States of America. As a U.S. non-profit, Conservancy must ensure that funds are not sent to countries under U.S. sanctions programs, such as Cuba, Iran, North Korea, or Syria.</p>
+				<p>Outreachy's fiscal parent, Software Freedom Conservancy, is a 501(c)(3) charitable non-profit in the United States of America. As a U.S. non-profit, Conservancy must ensure that funds are not sent to countries under U.S. sanctions programs, such as Cuba, Iran, North Korea, Russia, or Syria.</p>
 
 				<p>If you say yes, Outreachy will email you with additional questions.</p>
 			</div>
