Add direct link to list of documentation applicants might need for their initial application

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -189,6 +189,7 @@ Applicant Guide | Outreachy Documentation
 
 <p>You cannot save your initial application. You have to fill it out all at once. Make sure you have a stable internet connection.</p>
 
+<h3 id='initial-application-documentation-needed'>Documentation needed</h3>
 <p>Before you fill out your application, please have the following information:</p>
 <ul>
 	<li>If you are a university student: Find your academic calendar. You will need your academic calendar for this year. You will need your academic calendar for future school terms. If they are not available, use the term start and end dates from the previous year</li>
@@ -198,9 +199,9 @@ Applicant Guide | Outreachy Documentation
 	<li>If you are a self-employed contractor: Find the average number of invoiced hours over the past six months</li>
 </ul>
 
-<p>Before you fill out the initial application, write answers to the essay questions.</p>
-
 <h2 id='essay-questions'>Essay questions</h2>
+
+<p>Before you fill out the initial application, write answers to the four essay questions. Keep your answers in a personal document for future applications.</p>
 
 <p>The initial application includes four essay questions:</p>
 
