--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -16,16 +16,16 @@ You are applying for the {{ current_round.official_name }}.
 </p>
 
 <div class="card border-warning mb-3">
-	<div class="card-header text-white bg-warning">Please read this before you start</div>
+	<div class="card-header text-white bg-warning">Instructions</div>
 	<div class="card-body">
-		<p>You cannot save your initial application. You have to fill it out all at once. You cannot edit your application later. Make sure you have a stable internet connection.</p>
+		<p>Make sure you have a stable internet connection. You cannot save your initial application. You have to fill it out all at once. You cannot edit your application later.</p>
 		<p>
 		Before you fill out your application, please do the following:
 		</p>
 
 		<ul>
-			<li><a href="{% url 'docs-applicant' %}#eligibility">Find out if you are eligible for Outreachy</a></li>
-			<li><a href="{% url 'docs-applicant' %}#initial-application">Find any documents you might need</a></li>
+			<li><a href="{% url 'docs-applicant' %}#eligibility">Read the Outreachy eligibility rules</a></li>
+			<li><a href="{% url 'docs-applicant' %}#initial-application-documentation-needed">Find any documents you might need</a></li>
 			<li><a href="{% url 'docs-applicant' %}#essay-questions">Prepare for the essay questions</a></li>
 			<li><a href="{% url 'docs-applicant' %}#essay-tips">Read our tips for writing strong essays</a></li>
 		</ul>
