--- a/home/templates/home/eligibility_wizard_foss_experience.html
+++ b/home/templates/home/eligibility_wizard_foss_experience.html
@@ -31,7 +31,22 @@ You are welcome here.
 {{ wizard.form.media }}
 {{ wizard.management_form }}
 {% for field in form.visible_fields %}
-    {% if 'Have you contributed to' in field.label_tag %}
+    {% if 'Have you been accepted as a Google Summer of Code intern' in field.label_tag %}
+	    <div class="form-group card">
+		    {{ field.errors }}
+		    <div class = "card-header">
+			    {{ field.label_tag|safe }}
+		    </div>
+		    <div class = "card-body">
+			    {{ field }}
+		    </div>
+		    <div class="card-footer bg-white">
+			    <p>If you have not been accepted as an intern for these programs, say 'No'.</p>
+			    <p>If you applied to Outreachy but you were not accepted as an intern, say 'No'.</p>
+			    <p>If you have been accepted as an intern for any of these programs, say 'Yes'. Say 'Yes' even if you did not complete your internship successfully.</p>
+		    </div>
+	    </div>
+    {% elif 'Have you contributed to' in field.label_tag %}
 	    <div class="form-group card">
 		    {{ field.errors }}
 		    <div class = "card-header">
