Move mentor chat to 14:00 UTC, standardize date layout

--- a/home/templates/home/blog/2022-08-09-initial-applications-open.html
+++ b/home/templates/home/blog/2022-08-09-initial-applications-open.html
@@ -56,7 +56,7 @@ Important dates:
 </p>
 <ul>
 	<li><a href='#important-dates'>📅 Outreachy schedule</a></li>
-	<li><a href='#twitter-chat'>🐦 Twitter chat</a></li>
+	<li><a href='#twitter-chat'>🐦 Twitter chats</a></li>
 </ul>
 
 <p>
@@ -172,14 +172,14 @@ More projects will be added after the initial application deadline.
 
 <h3>🐦 August 10: Are you eligible for an Outreachy internship?</h3>
 
-<p><b>When:</b> Wednesday, August 10, 2022 at <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220810T140000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>14:00 UTC</a></p>
+<p><b>When:</b> <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220810T140000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>Wednesday, August 10, 2022, 2 p.m. UTC</a></p>
 <p><b>Where:</b> TBD - A link to the Twitter space will be shared by the <a href='https://twitter.com/outreachy'>Outreachy Twitter account</a>.</p>
 
 <p>Come learn about Outreachy and find out if you're eligible to apply! Join Outreachy organizers Sage Sharp and Omotola Omotayo in a Twitter space conversation. Sage and Omotola will go over Outreachy's eligibility rules and answer commonly asked questions.</p>
 
 <h3>🐦 August 15: Meet Outreachy mentors and interns</h3>
 
-<p><b>When:</b> Monday, {{ current_round.outreachy_chat }} at <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220815T160000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>16:00 UTC</a></p>
+<p><b>When:</b> <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220815T140000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>Monday, {{ current_round.outreachy_chat }} UTC</a></p>
 
 <p>Outreachy will run a chat on Twitter. The chat will introduce you to past Outreachy interns and current mentors.</p>
 
@@ -193,7 +193,7 @@ More projects will be added after the initial application deadline.
 
 <h3>🐦 August 16: Initial application - writing your essay</h3>
 
-<p><b>When:</b> Tuesday, August 16, 2022 at <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220816T140000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>14:00 UTC</a></p>
+<p><b>When:</b> <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220816T140000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>Tuesday, August 16, 2022, 2 p.m. UTC</a></p>
 <p><b>Where:</b> TBD - A link to the Twitter space will be shared by the <a href='https://twitter.com/outreachy'>Outreachy Twitter account</a>.</p>
 
 <p>Outreachy's initial application requires you to write four essays. These essays are one of the most important parts of your initial application.</p>
@@ -202,7 +202,7 @@ More projects will be added after the initial application deadline.
 
 <h3>🐦 August 19: Avoiding common mistakes in your initial application</h3>
 
-<p><b>When:</b> Friday, August 19, 2022 at <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220819T140000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>14:00 UTC</a></p>
+<p><b>When:</b> <a href='https://www.timeanddate.com/worldclock/converter.html?iso=20220819T140000&p1=137&p2=179&p3=233&p4=1440&p5=125&p6=53&p7=tz_pkt&p8=176&p9=469&p10=466&p11=235'>Friday, August 19, 2022, 2 p.m. UTC</a></p>
 <p><b>Where:</b> TBD - A link to the Twitter space will be shared by the <a href='https://twitter.com/outreachy'>Outreachy Twitter account</a>.</p>
 
 <p>Come learn how to avoid common mistakes in your initial application.</p>
