Update initial application to include universities on strike.
Our questions about school time commitments on the initial application
form don't make sense if a student's university is on strike. Update the
instructions to include that case. Re-arrange the instruction headings
to be consistent across the university info and school term sections.

Include information about school strikes before info about uncertain
term dates, because people should follow the strike instructions instead
of the uncertain school dates section.

Also cover cases of multiple universities and applying to universities
in the school info section, as we need additional instruction for those
cases on both that section and the school term dates section.

--- a/home/templates/home/eligibility_wizard_school_info.html
+++ b/home/templates/home/eligibility_wizard_school_info.html
@@ -15,16 +15,39 @@ Are you eligible to apply to Outreachy?
 Tell us about the university or college you will attend from <b>today until {{ current_round.sfc_payment_last_date|date:"F d, Y" }}</b>.
 </p>
 
+<p><b>University strike</b></p>
+
+<p>Some universities may be on strike. It may be unclear when classes will start again. There may not be a current or future academic calendar that is released.</p>
+
+<p>If your university in on strike, use the academic calendar link from the last year. After the university name, include the phrase "(on strike)".</p>
+
+<p><b>Uncertain term dates</b></p>
+
+<p>Some universities may not have released the schedule for future terms. In this case, use the past academic calendar link for the question about 'current academic calendar link'.</p>
+
+<p><b>Applying to universities</b></p>
+
+<p>
+If you are applying to universities and colleges, Outreachy needs to know which school you are likely to be accepted for. You can update your initial application once you find out what school you are accepted to. For now, use the academic calendar from the university you are most likely to be accepted at.
+</p>
+
+<p><b>Multiple universities</b></p>
+
+<p>
+If you will be attending multiple schools, put both school names in the University name. E.g. "University of the World and Graduate University of Global Technology". For the academic calendar links, use the academic calendar of the university you will attend for the longest time during the internship. On the next page, indicate which university you will be attending for each school term.
+</p>
+
+<p><b>Graduating students</b></p>
+
+<p>
+If you are or have already graduated from school, Outreachy needs to know which school you graduated from.
+In this case, fill in the past and current academic calendar links to be links to the calendar for the last two terms you attended school.
+</p>
+
+<p><b>Masters and PhD students</b></p>
+
 <p>
 If you are a masters or PhD student working on your thesis, fill out the information about the university or college that will be awarding your degree.
-</p>
-
-<p>
-If you will be attending multiple schools, put both school names in the University name. On the next page, indicate which university you will be at for each school term.
-</p>
-
-<p>
-If you are applying to universities and colleges, Outreachy needs to know your approximate school term dates. You can update your initial application if you find out what school you are accepted to. For now, use information from the university you are most likely to be accepted at.
 </p>
 
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
