--- a/home/templates/home/eligibility_wizard_school_terms.html
+++ b/home/templates/home/eligibility_wizard_school_terms.html
@@ -19,6 +19,12 @@ Are you eligible to apply to Outreachy?
 	<li>the school term <b>following</b> your next school term</li>
 </ul>
 
+<p><b>University strike</b></p>
+
+<p>Some universities may be on strike. It may be unclear when classes will start again. There may not be a current or future academic calendar that is released.</p>
+
+<p>If your university is on strike, fill in the last school term you attended school. After the term name, include the phrase "(on strike)". For the date when exams will end, fill in your last exam date. If the strike started before your exams, fill in the start date of the strike. Check the 'This is the last term in my degree' box. Although this is not your last term in your degree, that will allow you to continue to the next part of the form. Do not fill in dates of future terms unless they have been officially announced by your school.</p>
+
 <p><b>Uncertain term dates</b></p>
 
 <p>Some universities may not have released the schedule for future terms. In this case, use the dates from past academic calendars. Use the most recent calendar available for that term.</p>
@@ -27,6 +33,12 @@ Are you eligible to apply to Outreachy?
 
 <p>
 If you are applying to universities and colleges, Outreachy needs to know your approximate school term dates. You can update your initial application if you find out what school you are accepted to. For now, use the academic calendar from the university you are most likely to be accepted at.
+</p>
+
+<p><b>Multiple universities</b></p>
+
+<p>
+If you will be attending multiple schools, put school terms for both universities in this form. If one term is the last term in your degree, check the 'last term' box. Then fill in the first school term of your new degree. Make sure that the term name says which degree and which university the school term is for (e.g. "8th semester - University of the World" and "1st semester - Graduate University of Global Technology").
 </p>
 
 <p><b>Graduating students</b></p>
