--- a/home/templates/home/eligibility_wizard_time_commitments.html
+++ b/home/templates/home/eligibility_wizard_time_commitments.html
@@ -46,6 +46,7 @@ Include your schedule from <b>today until {{ current_round.sfc_payment_last_date
 			    <p>If you are currently a student, say 'Yes'.</p>
 			    <p>If you are a student who will graduate soon, say 'Yes'.</p>
 			    <p>If your school break is during the internship, say 'Yes'.</p>
+			    <p>If your university is on strike, say 'Yes'.</p>
 			    <p>If you are a masters or PhD student working on your thesis, say 'Yes'.</p>
 		    </div>
 	    </div>
