Mark survey in intern feedback form #4 as optional

--- a/home/templates/home/feedback4fromintern_form.html
+++ b/home/templates/home/feedback4fromintern_form.html
@@ -64,6 +64,9 @@ Internship feedback #4
 	{% elif 'last date you were in contact' in field.label_tag %}
 		<hr>
 		<h2>Intern progress</h2>
+	{% elif 'How likely would you be to recommend a friend contribute to open source?' in field.label_tag %}
+		<hr>
+		<h2>(Optional) Internship survey</h2>
 	{% endif %}
 	{% if 'Time comments' in field.label_tag %}
 		
