--- a/home/templates/home/eligibility_wizard_essay_questions.html
+++ b/home/templates/home/eligibility_wizard_essay_questions.html
@@ -212,7 +212,7 @@ It will not be shared with mentors, coordinators, or other applicants.
 
 					<p>Content warnings can be one or two words. Examples include: "violence", "sexual assault", or "war".</p>
 					<p>Content warnings help reviewers mentally prepare to read your essay. Thank you for your help!</p>
-					<p>If you do you not talk about harsh or hard things in your essays, leave this field blank.
+					<p>If you do not talk about harsh or hard things in your essays, leave this field blank.
 					</p>
 				</div>
 			</div>
