Add page to view statistics during contribution period
During the Outreachy contribution period, organizers often want to check
in and see how applicants are doing. This page allows us to see
statistics about which countries contributors come from, what pronouns
they use, etc. It also displays information about the contributors.

--- a/home/templates/home/dashboard/staff_subscriptions.html
+++ b/home/templates/home/dashboard/staff_subscriptions.html
@@ -5,7 +5,7 @@
 <ul>
 {% for cohort in section.cohorts %}
 	<li>
-		<a href="{% url 'review-interns' round_slug=cohort.slug %}">{{ cohort.internstarts|date:"F Y" }} internships</a>
+		{{ cohort.internstarts|date:"M Y" }} <a href="{% url 'review-interns' round_slug=cohort.slug %}">interns,</a> <a href="{% url 'review-contributors' round_slug=cohort.slug %}">contributors</a>
 	</li>
 {% endfor %}
 </ul>
